I finally did it

--- a/myWebpage.html
+++ b/myWebpage.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <p>This is my first webpage</p>
+    <p>Wow! I love this</p>
+    <p>I want to become a better programmer</p>
 
 </body>
 </html>
